--- a/Lended/Base.lproj/LaunchScreen.storyboard
+++ b/Lended/Base.lproj/LaunchScreen.storyboard
@@ -33,7 +33,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="63" id="jra-qx-TKb"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="100"/>
+                                <fontDescription key="fontDescription" name="Georgia-Bold" family="Georgia" pointSize="100"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
